have running modal for photo and maps

--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,9 @@ round-avatar: true
 imagesurl: "/photos/img/"
 thumbsurl: "/photos/thumbs/"
 
+baseurl: ""
+url: "https://markcruse.github.io"
+
 #####################################
 # --- Footer social media links --- #
 #####################################
