--- a/_config.yml
+++ b/_config.yml
@@ -142,7 +142,7 @@ edit_page_button: true
 navbar-var-length: false
 
 # The keywords to associate with your website, for SEO purposes
-#keywords: "my,list,of,keywords"
+keywords: "Mark Cruse, Lexington, Lexington KY, KY, Cruse"
 
 ######################################
 # --- Colours / background image --- #
