add page descriptions change canonical

--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ imagesurl: "/photos/img/"
 thumbsurl: "/photos/thumbs/"
 
 baseurl: ""
-url: "https://markcruse.github.io"
+url: "https://waywardmark.com"
 
 #####################################
 # --- Footer social media links --- #
